2008-12-23  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* setup.py: Compiling against new ODE. Needs to use ode-config to
	get CFLAGS and LIBS (for example, to tell if we're compiling with
	-DdDOUBLE).
	* ode.pyx, declarations.pyx: Compiling against new ODE requires
	dInitODE to initialize colliders.

2008-12-21  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* space.pyx: Rebuilding with new Pyrex gives an error with parameter
	  "type". Renamed to "space_type" in Space factory method.

2007-07-09  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* tutorial3.py: change glScale to glScalef to be compatible with
	  python-opengl version 3.0 and up. Thanks to Nathanial Troutman for
	  finding the bug and suggesting a fix.

2007-06-16  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* ode.pyx: reapplied weakref patch after finding the bug
	* tutorial3.py: fix bug where geoms were not stored, causing them
	  to be deleted as per the weakref patch :)

2007-06-14  Ethan Glasser-Camp  <ethan.glasser.camp@gmail.com>

	* heightfielddata.pyx: bug fix from Dan Miller
	* Reverted weakref patch -- it causes some kind of strange
	  bug. I'll look into it later.
	* heightfielddata.pyx: Save a reference to the data tuple, because
	  otherwise it gets garbage collected and causes problems. Thanks
	  to Dan Miller for finding the bug and figuring it out.
	
2007-06-05  Matthias Baas <mbaas@users.sourceforge.net>

	* Applied a couple of patches posted by Ethan Glasser-Camp to the 
	  mailing list (doc strings for GeomRay, __delattr__ on
	  GeomObject, UniversalJoint angle updates, storing
	  Geoms with weak references, triangle count)
	* Added the heightfield patch as well

2006-11-28  Matthias Baas <mbaas@users.sourceforge.net>

	* setup.py: Modified the setup script to upgrade to ODE 0.7.
	
2006-11-10  Matthias Baas <mbaas@users.sourceforge.net>

	* joints.pyx, geoms.pyx: Applied some more patches by 